# stoken_bfasst

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  azure-pipelines.yml  azure-pipelines.yml.py  example.py  pyproject.toml  setup.cfg  setup.py
azure-pipelines/: conda-windows-template.yml  get_source.yml  get_sources.yml  get_sources_job.yml  lib.ps1  windows-template.yml
c-src/src/: stoken_bfasst.c
include/: stoken_bfasst.h
src/: stoken_bfasst.c
src/stoken_bfasst_core/: ctypes.py  securid.py
tests/: test_search.py
